const defaultAccounts = [
  {
    name: 'Checking',
    balance: '0',
    currency: 'USD',
    hidden: 0,
  },
  {
    name: 'Savings',
    balance: '5000',
    currency: 'USD',
    hidden: 0,
  },
  {
    name: 'Cash',
    balance: '100',
    currency: 'USD',
    hidden: 0,
  },
  {
    name: 'EUR Cash',
    balance: '100',
    currency: 'EUR',
    hidden: 0,
  },
];

export default defaultAccounts;
